# gl.cpp

./: .gitmodules  CMakeLists.txt  README.md
docs/: cube.html  cube.js  cube.wasm
internals/: CMakeLists.txt
internals/cube/: CMakeLists.txt
internals/cube/program/: main.cpp
internals/testing/: compile_synopsis_test.cpp
internals/tests/: CMakeLists.txt
provides/: CMakeLists.txt
provides/include/gl_v1/: config.hpp  gl.hpp  synopsis.hpp
